<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/adapter_forecast_time"
        android:text="@string/time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:elevation="4dp"
        app:cardCornerRadius="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/adapter_forecast_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/adapter_city_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryVariant">


            <TextView
                android:id="@+id/adapter_forecast_conditions"
                android:text="@string/city_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <ImageView
                android:id="@+id/adapter_forecast_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_baseline_cloud_24"
                android:padding="@dimen/margin"
                android:scaleType="fitCenter"
                android:contentDescription="@string/city_name_label"
                app:layout_constraintBottom_toTopOf="@id/adapter_forecast_temp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/adapter_forecast_conditions"/>

            <TextView
                android:id="@+id/adapter_forecast_temp"
                android:text="@string/city_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toTopOf="@+id/adapter_forecast_low_high_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <LinearLayout
                android:id="@+id/adapter_forecast_low_high_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/margin_8dp">

                <TextView
                    android:id="@+id/adapter_forecast_high"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/temperature_value"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    />

                <TextView
                    android:id="@+id/adapter_forecast_low"
                    android:text="@string/temperature_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>